--- a/gridSystem.html
+++ b/gridSystem.html
@@ -4,12 +4,28 @@
     <title>Bootstrap Grid System</title>
 
     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
 
 <style type="text/css">
   .pink {
       background: pink;
-      border: 1px solid purple;
+      border: 1px solid black;
+  }
+
+  .red {
+      background: red;
+      border: 1px solid black;
+  }
+
+  .blue {
+      background: blue;
+      border: 1px solid black;
+      color: white;
+  }
+
+  .grey {
+      background: grey;
+      border: 1px solid black;
   }
 </style>
 
@@ -24,26 +40,45 @@
 
    <div class="container">
         <div class="row">
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
-            <div class="col-md-1 pink">COL MD 1</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
+            <div class="col-md-1 pink">COL x</div>
         </div> 
 
+
         <div class="row">
-            <div class="col-md-4 pink">COL MD 4</div>
-            <div class="col-md-4 pink">COL MD 4</div>
-            <div class="col-md-4 pink">COL MD 4</div>
+            <div class="col-md-4 blue">COL 4</div>
+            <div class="col-md-4 blue">COL 4</div>
+            <div class="col-md-4 blue">COL 4</div>
+            
         </div>
-   </div>
+        
+        <div class="row">
+            <div class="col-md-3 red">COL 3</div>
+            <div class="col-md-3 red">COL 3</div>
+            <div class="col-md-3 red">COL 3</div>
+            <div class="col-md-3 red">COL 3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2 grey">COL 2</div>
+            <div class="col-md-2 grey">COL 2</div>
+            <div class="col-md-2 grey">COL 2</div>
+            <div class="col-md-2 grey">COL 2</div>
+            <div class="col-md-2 grey">COL 2</div>
+            <div class="col-md-2 grey">COL 2</div>
+        </div>
+
+    </div>  <!-- End of div class container -->
 
 
 
