final final commit

--- a/gridSystem.html
+++ b/gridSystem.html
@@ -12,9 +12,10 @@
       border: 1px solid black;
   }
 
-  .red {
-      background: red;
-      border: 1px solid black;
+  .orange {
+      background: orange;
+      border: 1px dashed red;
+      height: 50px;
   }
 
   .blue {
@@ -39,30 +40,45 @@
    =============================================== -->
 
    <div class="container">
-        <div class="row">
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-            <div class="col-md-1 pink">COL x</div>
-        </div> 
+        <!-- <div class="row">
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+            <div class="col-md-1 col-sm-2 pink">COL x</div>
+        </div>  -->
 
 
         <div class="row">
-            <div class="col-md-4 blue">COL 4</div>
-            <div class="col-md-4 blue">COL 4</div>
-            <div class="col-md-4 blue">COL 4</div>
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                    <div class="col-md-6 orange">First Half</div>
+                    <div class="col-md-6 orange">Other Half</div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 pink">TOUR DATE!</div>
+            <div class="col-md-3 col-sm-6 pink">TOUR DATE!</div>
+            <div class="col-md-3 col-sm-6 pink">
+                <div class="row">
+                    <div class="col-md-2 orange"></div>
+                    <div class="col-md-2 orange"></div>
+                    <div class="col-md-2 orange"></div>
+                    <div class="col-md-2 orange"></div>
+                    <div class="col-md-2 orange"></div>
+                    <div class="col-md-2 orange"></div>
+                </div>
+            </div>
             
         </div>
         
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-3 red">COL 3</div>
             <div class="col-md-3 red">COL 3</div>
             <div class="col-md-3 red">COL 3</div>
@@ -76,7 +92,7 @@
             <div class="col-md-2 grey">COL 2</div>
             <div class="col-md-2 grey">COL 2</div>
             <div class="col-md-2 grey">COL 2</div>
-        </div>
+        </div> -->
 
     </div>  <!-- End of div class container -->
 
